--- a/index.html
+++ b/index.html
@@ -19,37 +19,38 @@
     <!-- Preconnect to Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
+
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
       rel="stylesheet"
-    />
+    /> -->
 
     <!-- Load all required fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Instrument+Serif&display=swap"
       rel="stylesheet"
-    />
+    /> -->
 
     <!-- New Fonts -->
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Fleur+De+Leah&family=Galada&family=Karla+Tamil+Inclined:wght@400;700&family=Martel:wght@200;300;400;600;700;800;900&family=Monsieur+La+Doulaise&family=Noto+Nastaliq+Urdu:wght@400..700&display=swap"
       rel="stylesheet"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap"
       rel="stylesheet"
-    />
+    /> -->
 
     <!-- Add preload for critical fonts -->
-    <link
+    <!-- <link
       rel="preload"
       href="https://fonts.gstatic.com/s/playfairdisplay/v30/nuFvD-vYSZviVYUb_rj3ij__anPXJzDwcbmjWBN2PKd3vXDXbtXK-F2qC0s.woff2"
       as="font"
@@ -62,7 +63,7 @@
       as="font"
       type="font/woff2"
       crossorigin
-    />
+    /> -->
 
     <!-- Add font-display swap to ensure text remains visible during webfont load -->
     <style>
