--- a/index.html
+++ b/index.html
@@ -2,17 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="color-scheme" content="light dark" />
-    <link
-      rel="icon"
-      media="(prefers-color-scheme: dark)"
-      href="src/assets/dark-icon.svg"
-    />
-    <link
-      rel="icon"
-      media="(prefers-color-scheme: light)"
-      href="src/assets/light-icon.svg"
-    />
+    <link rel="icon" href="src/assets/light-icon.svg" id="favicon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>spevents</title>
 
@@ -20,50 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <!-- <link
-      href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
-      rel="stylesheet"
-    /> -->
-
     <!-- Load all required fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <!-- <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Instrument+Serif&display=swap"
-      rel="stylesheet"
-    /> -->
-
-    <!-- New Fonts -->
-    <!-- <link
-      href="https://fonts.googleapis.com/css2?family=Fleur+De+Leah&family=Galada&family=Karla+Tamil+Inclined:wght@400;700&family=Martel:wght@200;300;400;600;700;800;900&family=Monsieur+La+Doulaise&family=Noto+Nastaliq+Urdu:wght@400..700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap"
-      rel="stylesheet"
-    /> -->
-
-    <!-- Add preload for critical fonts -->
-    <!-- <link
-      rel="preload"
-      href="https://fonts.gstatic.com/s/playfairdisplay/v30/nuFvD-vYSZviVYUb_rj3ij__anPXJzDwcbmjWBN2PKd3vXDXbtXK-F2qC0s.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      href="https://fonts.gstatic.com/s/instrumentserif/v3/W0pondvD3qsk_5NWpO_eMXK5iGlwHqi6.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    /> -->
 
     <!-- Add font-display swap to ensure text remains visible during webfont load -->
     <style>
@@ -96,6 +47,22 @@
         font-family: "Cinzel Decorative", cursive !important;
       }
     </style>
+
+    <script>
+      function updateFavicon() {
+        const isDark = localStorage.getItem("darkMode") === "true";
+        const favicon = document.getElementById("favicon");
+        if (favicon) {
+          favicon.href = isDark
+            ? "src/assets/dark-icon.svg"
+            : "src/assets/light-icon.svg";
+        }
+      }
+
+      // Update favicon on load and when storage changes
+      document.addEventListener("DOMContentLoaded", updateFavicon);
+      window.addEventListener("storage", updateFavicon);
+    </script>
   </head>
   <body>
     <div id="root"></div>
